prevent select for close button mobile menu

--- a/src/components/styles/MobileMenu.css
+++ b/src/components/styles/MobileMenu.css
@@ -28,4 +28,6 @@
   border: none;
   color: var(--primary-color-background);
   cursor: pointer;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
 }
